--- a/telegram-bot-amazon/config.json
+++ b/telegram-bot-amazon/config.json
@@ -6,6 +6,7 @@
   "url": "https://github.com/marciogranzotto/addon-telegram-bot-amazon/tree/master/README.md",
   "startup": "services",
   "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
+  "image": "marciogranzotto/image-{arch}-addon-telegram-bot-amazon",
   "boot": "auto",
   "hassio_role": "default",
   "homeassistant_api": true,
