--- a/telegram-bot-amazon/config.json
+++ b/telegram-bot-amazon/config.json
@@ -5,7 +5,7 @@
   "description": "A Telegram bot that, if made admin of a group, will delete any message containing an Amazon link and re-post it tagged with the specified affiliate tag.² is an open source modular smart mirror platform.",
   "url": "https://github.com/marciogranzotto/addon-telegram-bot-amazon/tree/master/README.md",
   "startup": "services",
-  "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
+  "arch": ["aarch64", "amd64", "armv7", "i386"],
   "image": "marciogranzotto/image-{arch}-addon-telegram-bot-amazon",
   "boot": "auto",
   "hassio_role": "default",
