Add missing armhf arch

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -88,8 +88,29 @@ jobs:
         if: github.event_name != 'pull_request'
         run: docker run --rm --privileged -v /var/run/docker.sock:/var/run/docker.sock -v ~/.docker:/root/.docker -v "$(pwd)":/data homeassistant/amd64-builder	-t telegram-bot-amazon --i386 --release-tag --docker-user marciogranzotto --docker-password ${{ secrets.DOCKER_PASSWORD }}
 
+  build-armhf:
+    name: Build and publish armhf image
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get version
+        env:
+          TAG_NAME: ${{ github.event.release.tag_name }}
+        run: echo "VERSION=${TAG_NAME#v}" >> $GITHUB_ENV
+      - name: Patch files
+        uses: onlyutkarsh/patch-files-action@v1.0.1
+        with:
+          files: |
+            telegram-bot-amazon/config.json
+          patch-syntax: |
+            = /version => "${{ env.VERSION }}"
+
+      - name: publish armhf docker files
+        if: github.event_name != 'pull_request'
+        run: docker run --rm --privileged -v /var/run/docker.sock:/var/run/docker.sock -v ~/.docker:/root/.docker -v "$(pwd)":/data homeassistant/amd64-builder	-t telegram-bot-amazon --armhf --release-tag --docker-user marciogranzotto --docker-password ${{ secrets.DOCKER_PASSWORD }}
+
   update-main-repo:
-    needs: [build-amd64, build-aarch64, build-armv7, build-i386]
+    needs: [build-amd64, build-aarch64, build-armv7, build-armhf, build-i386]
     name: Update addons repository
     runs-on: ubuntu-latest
     container:
