--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,21 @@ jobs:
             = /version => "${{ github.run_number }}"
       - name: build armv7 image
         run: docker run --rm --privileged -v /var/run/docker.sock:/var/run/docker.sock -v ~/.docker:/root/.docker -v "$(pwd)":/data homeassistant/amd64-builder -t telegram-bot-amazon --armv7 --test
+  build-armhf:
+    name: Build armhf image
+    runs-on: ubuntu-latest
+    needs: [dockerlint, markdown-link-check]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Patch files
+        uses: onlyutkarsh/patch-files-action@v1.0.1
+        with:
+          files: |
+            telegram-bot-amazon/config.json
+          patch-syntax: |
+            = /version => "${{ github.run_number }}"
+      - name: build armhf image
+        run: docker run --rm --privileged -v /var/run/docker.sock:/var/run/docker.sock -v ~/.docker:/root/.docker -v "$(pwd)":/data homeassistant/amd64-builder -t telegram-bot-amazon --armhf --test
   build-i386:
     name: Build i386 image
     runs-on: ubuntu-latest
